gccida/g2/use_crosses_set_p
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/use_crosses_set_p/src/combine.c:12071:26: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v25 = ( ( unsigned int)( mode_class_0[v22] - 5) < 2) + 1; 
                         ^~~~~~~~~~~~
                         mode_class
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/use_crosses_set_p/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/use_crosses_set_p/src/obj/combine.o] Error 1
